change my photo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <label for="#title" id="subtitle"
           >Design Driven Full-Stack Developer</label
         >
-        <span><img src="assets/img/deeley2.jpg" /></span>
+        <span><img src="assets/img/deeley.jpg" /></span>
       </article>
       <article id="intro">
         <p>
